[package]
name = "helper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bitcode = { version = "0.6", features = ["serde"] }
futures-util = "0.3"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["timeout", "fs", "auth", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
reqwest-websocket = "0.5"
dotenvy = "0.15"
anyhow = "1.0"
serde_json = "1.0"
wake-on-lan = "0.2"

common = { path = "../common" }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
