[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bitcode = { version = "0.6", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sysinfo = "0.37"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["timeout"] }
kill_tree = { version = "0.2.4", features = ["tokio"] }

common = { path = "../common" }
children = { path = "../children" }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["minecraft"]
minecraft = []
terraria = []