[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
bitcode = { version = "0.6.9", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.13.4", features = ["json", "rustls", "query"], default-features = false }
sysinfo = "0.39.3"
tokio = { version = "1.52.3", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["timeout"] }

common = { path = "../common" }
children = { path = "../children" }
serde = "1.0.228"
serde_yaml = "0.9.34"
toml = "1.1.2"
strsim = "0.11.1"
zip = "8.6.0"
fastnbt = "2.6.1"
flate2 = "1.1.9"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1"
win32-version-info = "0.3.0"
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"
